[gd_scene load_steps=2 format=3 uid="uid://runfailed_scene_01"]

[ext_resource type="Script" path="res://scripts/core/RunFailed.gd" id="1_runfailed"]

[node name="RunFailedScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_runfailed")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.949, 0.918, 0.843, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="UI/CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Run Failed"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="UI/CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Division: High School
Ante reached: 1 / 5
Races won: 0
Final gold: 100"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonRow" type="HBoxContainer" parent="UI/CenterContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MainMenuButton" type="Button" parent="UI/CenterContainer/VBox/ButtonRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 44)
layout_mode = 2
text = "Main Menu"

[node name="NewRunButton" type="Button" parent="UI/CenterContainer/VBox/ButtonRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 44)
layout_mode = 2
text = "New Run"
